+ FIxng overflow css isseus with some slideshow components
 + Troubleshooting buy button with third party link

--- a/assets/section-brand-intro.css
+++ b/assets/section-brand-intro.css
@@ -290,6 +290,12 @@
 \*------------------------------------*/
 
 
+.brand-intro__awards {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
 @media screen and (min-width:700px) {
     .brand-intro__awards {
         width: 100%;
