--- a/assets/section-image-slideshow-break.css
+++ b/assets/section-image-slideshow-break.css
@@ -4,6 +4,9 @@
 
 .image-slideshow-break {
     margin-bottom: var(--level3);
+    overflow: hidden;
+    position: relative;
+    width: 100%;
 }
 
 .image-slideshow-break__inner {
