--- a/assets/section-recipes-featured.css
+++ b/assets/section-recipes-featured.css
@@ -7,6 +7,9 @@
     background-color: rgb(var(--color-base-background-1));
     padding-bottom: 0;
     padding-top: 0;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
 }
 
 .recipes-featured-section.has-top-border {
